--- a/app/views/investigations/_list_images.html.erb
+++ b/app/views/investigations/_list_images.html.erb
@@ -1,4 +1,4 @@
-<!--
+<!-- CORS動作確認用
 <button id="previewButton1">プレビュー CORS 対応なし</button><br>
 <button id="previewButton2">プレビュー CORS 対応あり</button><br>
 <a id="downloadButton">ダウンロードする</a>
@@ -32,8 +32,7 @@ document.getElementById('downloadButton').addEventListener('click', event => {
   event.target.setAttribute("href", imgageData);
 });
 </script>  
--->
-
+CORS動作確認用 -->
 
 <p><input type="button" value="一括ダウンロード" id="batch" class="btn btn-primary" onclick="multi_download()"></p>
 
