--- a/app/views/investigations/pages/pre/_tatemonosuijyunsokuryokekkahyo.html.erb
+++ b/app/views/investigations/pages/pre/_tatemonosuijyunsokuryokekkahyo.html.erb
@@ -1,31 +1,38 @@
 <% @houses.each do |house| %>
-  <div class="page">
-    <table class="table table-bordered" style="font-size:10px;">
-      <tr>
-        <td colspan="4">建物水準測量結果表</td>
-        <td>家屋番号：<%= house.house_number %></td>
-      </tr>
-      <tr>
-        <td>測点</td>
-        <td>場所</td>
-        <td>事前調査測定値（mm）</td>
-        <td>事後調査測定値（mm）</td>
-        <td>変化量（mm）</td>
-      </tr>
-      <% points = house.points %>
-      <% points.each do |point| %>
-        <% pre_post = point.posts.find_by(survey_type: "pre") %>
+
+  <!-- コメントアウト -->
+  <% if false %>  
+
+    <div class="page">
+      <table class="table table-bordered" style="font-size:10px;">
         <tr>
-          <td><%= point.number %></td>
-          <td><%= point.room_name %></td>
-          <td><%= pre_post.hyoko + ((pre_post.ouro_fs - pre_post.ouro_bs) + (pre_post.fukuro_fs - pre_post.fukuro_bs)) / 2 %></td>
-          <td></td>
-          <td></td>
+          <td colspan="4">建物水準測量結果表</td>
+          <td>家屋番号：<%= house.house_number %></td>
         </tr>
-      <% end %>
-    </table>
-    <p class="text-right"><%= @investigation.investigator_pre_survey %></p>
-  </div>
+        <tr>
+          <td>測点</td>
+          <td>場所</td>
+          <td>事前調査測定値（mm）</td>
+          <td>事後調査測定値（mm）</td>
+          <td>変化量（mm）</td>
+        </tr>
+        <% points = house.points %>
+        <% points.each do |point| %>
+          <% pre_post = point.posts.find_by(survey_type: "pre") %>
+          <tr>
+            <td><%= point.number %></td>
+            <td><%= point.room_name %></td>
+            <td><%= pre_post.hyoko + ((pre_post.ouro_fs - pre_post.ouro_bs) + (pre_post.fukuro_fs - pre_post.fukuro_bs)) / 2 %></td>
+            <td></td>
+            <td></td>
+          </tr>
+        <% end %>
+      </table>
+      <p class="text-right"><%= @investigation.investigator_pre_survey %></p>
+    </div>
+    
+  <% end %>
+  <!-- コメントアウト -->   
 
   <% points = house.points %>
   <% num = 0 %>
