--- a/app/views/houses/syodakusyo_new_ongoing_survey.html.erb
+++ b/app/views/houses/syodakusyo_new_ongoing_survey.html.erb
@@ -23,17 +23,17 @@
     <td>現住居者氏名</td>
     <td><%= @house.house_name %></td>
     <td>TEL</td>
-    <td></td>
+    <td><%= @house.resident_phone_number %></td>
   </tr>
   <tr>
     <td>所有者氏名（承諾者）</td>
     <td><%= @house.owner_name %></td>
     <td>TEL</td>
-    <td></td>
+    <td><%= @house.owner_phone_number %></td>
   </tr>
   <tr>
     <td>調査範囲</td>
-    <td colspan="3"></td>
+    <td colspan="3"><%= @house.range_ongoing_survey %></td>
   </tr>        
 </table>
 <p>下記目的のための調査を承諾します。</p>
