--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -116,8 +116,8 @@ $('#damage_image1').on('change', function (e) {
       canvas.style.height = String(imgH * rate) + "px";
       
       // canvasの画像化
-      var canvas_data = canvas.toDataURL('image/jpeg');
-      $("#canvas_data").val(canvas_data);
+      //var canvas_data = canvas.toDataURL('image/jpeg');
+      //$("#canvas_data").val(canvas_data);
     }
   }
   reader.readAsDataURL(e.target.files[0]);
@@ -190,15 +190,13 @@ $('#liveview').on('click', function(e){
     //console.log(ctx);
   }
   // canvasの画像化
-  var canvas_data = canvas.toDataURL('image/jpeg');
-  $("#canvas_data").val(canvas_data);
+  //var canvas_data = canvas.toDataURL('image/jpeg');
+  //$("#canvas_data").val(canvas_data);
 });
 
-/*
 $('#submit').on('mousedown', function (e) {
   // canvasの画像化
   var canvas_data = canvas.toDataURL('image/jpeg');
   $("#canvas_data").val(canvas_data);
 });
-*/
 </script>
