--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -22,10 +22,10 @@
       </div>
       <div class="col-xs-6" id="sonsyo-<%= @sonsyo.id %>">
         <canvas id="liveview"></canvas>
-        <!--
         <input type="hidden" name="canvas_data" id="canvas_data">
-        -->
-        <%= f.hidden_field :canvas_data %>
+        <% if false %>      
+          <%= f.hidden_field :canvas_data %>
+        <% end %>
       </div>
     </div>
     
@@ -200,8 +200,7 @@ $('#liveview').on('click', function(e){
 $('#submit').on('mousedown', function (e) {
   // canvasの画像化
   var canvas_data = canvas.toDataURL('image/jpeg');
-  //$("#canvas_data").val(canvas_data);
-  $("#damage_canvas_data").val(canvas_data);
-  
+  $("#canvas_data").val(canvas_data);
+  //$("#damage_canvas_data").val(canvas_data);
 });
 </script>
