--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -8,7 +8,7 @@
         <%= f.file_field :image1, :accept => 'image/*', :capture => 'camera' %>
       </div>
       <div class="col-xs-6">
-        <%= f.submit '登録', :class=>"btn btn-primary", :id=>"submit", method: :delete, data: { confirm: '登録してよろしいでしょうか？' } %>
+        <%= f.submit '登録', :class=>"btn btn-primary", :id=>"submit", data: { confirm: '登録してよろしいでしょうか？' } %>
       </div>
     </div>
     
@@ -22,10 +22,7 @@
       </div>
       <div class="col-xs-6" id="sonsyo-<%= @sonsyo.id %>">
         <canvas id="liveview"></canvas>
-        <input type="hidden" name="canvas_data" id="canvas_data">
-        <% if false %>      
-          <%= f.hidden_field :canvas_data %>
-        <% end %>
+        <input type="hidden" name="canvas_data" id="liveview_data">
       </div>
     </div>
     
@@ -117,10 +114,6 @@ $('#damage_image1').on('change', function (e) {
       // スタイルを設定
       canvas.style.width = String(imgW * rate) + "px";
       canvas.style.height = String(imgH * rate) + "px";
-      
-      // canvasの画像化
-      //var canvas_data = canvas.toDataURL('image/jpeg');
-      //$("#canvas_data").val(canvas_data);
     }
   }
   reader.readAsDataURL(e.target.files[0]);
@@ -192,9 +185,6 @@ $('#liveview').on('click', function(e){
     
     //console.log(ctx);
   }
-  // canvasの画像化
-  //var canvas_data = canvas.toDataURL('image/jpeg');
-  //$("#canvas_data").val(canvas_data);
 });
 /*
 $('#submit').on('mousedown', function (e) {
@@ -206,8 +196,7 @@ $('#submit').on('mousedown', function (e) {
 */
 function imagingAtCanvas() {
   // canvasの画像化
-  var canvas_data = canvas.toDataURL('image/jpeg');
-  $("#canvas_data").val(canvas_data);
-  //$("#damage_canvas_data").val(canvas_data);
+  var liveview_data = canvas.toDataURL('image/jpeg');
+  $("#liveview_data").val(liveview_data);
 }
 </script>
