--- a/app/views/damages/_form.html.erb
+++ b/app/views/damages/_form.html.erb
@@ -22,7 +22,13 @@
       </div>
       <div class="col-xs-6" id="sonsyo-<%= @sonsyo.id %>">
         <canvas id="liveview"></canvas>
-        <input type="hidden" name="canvas_data" id="liveview_data">
+        <input type="hidden" name="liveview_data">
+        <!--
+        <input type="hidden" name="type">
+        <input type="hidden" name="encoder">
+        <input type="hidden" name="data">
+        <input type="hidden" name="extension">
+        -->
       </div>
     </div>
     
@@ -197,6 +203,12 @@ $('#submit').on('mousedown', function (e) {
 function imagingAtCanvas() {
   // canvasの画像化
   var liveview_data = canvas.toDataURL('image/jpeg');
-  $("#liveview_data").val(liveview_data);
+  //$("#liveview_data").val(liveview_data);
+  $('input[name="liveview_data"]').val(liveview_data);
+  
+  //liveview_data.match(%r{data:(.*?);(.*?),(.*)$});
+  //console.log()
+
+
 }
 </script>
